[package]
name = "stupidfs"
description = "More files per file: hide files by storing them in the metadata of other files"
repository = "https://github.com/GoldenStack/stupidfs"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
walkdir = "2.5.0"
